--- a/html/events/index.html
+++ b/html/events/index.html
@@ -49,100 +49,115 @@
   <main class="content content-grid">
     <header class="section-header">
       <h2 class="section-heading">Events</h2>
-      <span class="side-to-side">
-        <button class="btn btn-schedule" type="button" name="button" onclick="togglePopup('scheduleEvent')">
-          <i class="fa-solid fa-plus icon"></i>
-          Schedule Event
-        </button>
-        <form class="search-field" action="index.html" method="post">
-          <input class="input search" type="search" name="" value="" placeholder="Search here...">
-          <button class="btn btn-search" type="submit" name="search-btn"><i class="fa-solid fa-magnifying-glass icon"></i></button>
-        </form>
-      </span>
+      <button class="btn btn-schedule" type="button" name="button" onclick="togglePopup('scheduleEvent')">
+        <i class="fa-solid fa-plus icon"></i>
+        Schedule Event
+      </button>
     </header>
 
-    <!-- Insert Codes Here -->
-    <div class="table-container">
-      <table class="table">
-      <thead class="table-header">
-        <tr>
-          <th></th>
-          <th>Event</th>
-          <th>Client</th>
-          <th>Date</th>
-          <th>Action</th>
-        </tr>
-      </thead>
+    <div class="side-to-side table-action-buttons">
+      <div class="table-select-action-buttons">
+        <div class="table-select-action-buttons hidden" id="tableSelectOptions">
+          <button class="btn btn-submit" type="submit" form="table-form">
+            <i class="fa-solid fa-trash-can icon"></i>
+            Delete
+          </button>
+          <button class="btn btn-neutral" onclick="selectAllCheckbox('selectAll', true);">
+            <i class="fa-solid fa-xmark icon"></i>
+            Cancel
+          </button>
+        </div>
+      </div>
 
-      <tbody class="table-body">
-        <!-- Sample Data -->
-        <tr>
-          <th scope="row"><input type="checkbox" name="activityName#" value=""></th>
-          <td>Marriage</td>
-          <td>Mr. and Mrs. Wed</td>
-          <td class="date">MMMM dd, YYYY</td>
-          <td><button class="btn btn-certificate" type="button" name="button">Certificate</button></td>
-        </tr>
-
-        <tr>
-          <th scope="row"><input type="checkbox" name="activityName#" value=""></th>
-          <td>Baptismal</td>
-          <td>Baby Baptism</td>
-          <td class="date">MMMM dd, YYYY</td>
-          <td><button class="btn btn-certificate" type="button" name="button">Certificate</button></td>
-        </tr>
-
-        <tr>
-          <th scope="row"><input type="checkbox" name="activityName#" value=""></th>
-          <td>Anniversary</td>
-          <td>1st Anniversary Anniversary</td>
-          <td>MMMM dd, YYYY</td>
-          <td><span class="no-action"></span></td>
-        </tr>
-
-        <tr>
-          <th scope="row"><input type="checkbox" name="activityName#" value=""></th>
-          <td>Marriage</td>
-          <td>Mr. and Mrs. Wed</td>
-          <td>MMMM dd, YYYY</td>
-          <td><button class="btn btn-certificate" type="button" name="button">Certificate</button></td>
-        </tr>
-
-
-        <tr>
-          <th scope="row"><input type="checkbox" name="activityName#" value=""></th>
-          <td>Marriage</td>
-          <td>Mr. and Mrs. Wed</td>
-          <td>MMMM dd, YYYY</td>
-          <td><button class="btn btn-certificate" type="button" name="button">Certificate</button></td>
-        </tr>
-
-        <tr>
-          <th scope="row"><input type="checkbox" name="activityName#" value=""></th>
-          <td>Baptismal</td>
-          <td>Baby Baptism</td>
-          <td>MMMM dd, YYYY</td>
-          <td><button class="btn btn-certificate" type="button" name="button">Certificate</button></td>
-        </tr>
-
-        <tr>
-          <th scope="row"><input type="checkbox" name="activityName#" value=""></th>
-          <td>Anniversary</td>
-          <td>1st Anniversary Anniversary</td>
-          <td>MMMM dd, YYYY</td>
-          <td><span class="no-action"></span></td>
-        </tr>
-
-        <tr>
-          <th scope="row"><input type="checkbox" name="activityName#" value=""></th>
-          <td>Marriage</td>
-          <td>Mr. and Mrs. Wed</td>
-          <td>MMMM dd, YYYY</td>
-          <td><button class="btn btn-certificate" type="button" name="button">Certificate</button></td>
-        </tr>
-      </tbody>
-    </table>
+      <form class="search-field" action="index.html" method="post">
+        <input class="input search" type="search" name="" value="" placeholder="Search here...">
+        <button class="btn btn-search" type="submit" name="search-btn"><i class="fa-solid fa-magnifying-glass icon"></i></button>
+      </form>
     </div>
+
+    <!-- Insert Codes Here -->
+    <!-- Uncomment form when its time to pass the project -->
+    <form class="table-container" action="index.html" method="post" id="table-form">
+      <table class="table">
+        <thead class="table-header">
+          <tr>
+            <th><input type="checkbox" name="activityName#" value="" id="selectAll" onclick="selectAllCheckbox('selectAll');"></th>
+            <th>Event</th>
+            <th>Client</th>
+            <th>Date</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+
+        <tbody class="table-body" id="tableData">
+          <!-- Sample Data -->
+          <tr id="event1">
+            <th scope="row"><input type="checkbox" name="eventName#" value="" onclick="checkedRow('event1', event)"></th>
+            <td>Marriage</td>
+            <td>Mr. and Mrs. Wed</td>
+            <td class="date">MMMM dd, YYYY</td>
+            <td><button class="btn btn-certificate" type="button" name="button">Certificate</button></td>
+          </tr>
+
+          <tr id="event2">
+            <th scope="row"><input type="checkbox" name="eventName#" value="" onclick="checkedRow('event2', event)"></th>
+            <td>Baptismal</td>
+            <td>Baby Baptism</td>
+            <td class="date">MMMM dd, YYYY</td>
+            <td><button class="btn btn-certificate" type="button" name="button">Certificate</button></td>
+          </tr>
+
+          <tr id="event3">
+            <th scope="row"><input type="checkbox" name="eventName#" value="" onclick="checkedRow('event3', event)"></th>
+            <td>Anniversary</td>
+            <td>1st Anniversary Anniversary</td>
+            <td>MMMM dd, YYYY</td>
+            <td><span class="no-action"></span></td>
+          </tr>
+
+          <tr id="event4">
+            <th scope="row"><input type="checkbox" name="eventName#" value="" onclick="checkedRow('event4', event)"></th>
+            <td>Marriage</td>
+            <td>Mr. and Mrs. Wed</td>
+            <td>MMMM dd, YYYY</td>
+            <td><button class="btn btn-certificate" type="button" name="button">Certificate</button></td>
+          </tr>
+
+
+          <tr id="event5">
+            <th scope="row"><input type="checkbox" name="eventName#" value="" onclick="checkedRow('event5', event)"></th>
+            <td>Marriage</td>
+            <td>Mr. and Mrs. Wed</td>
+            <td>MMMM dd, YYYY</td>
+            <td><button class="btn btn-certificate" type="button" name="button">Certificate</button></td>
+          </tr>
+
+          <tr id="event6">
+            <th scope="row"><input type="checkbox" name="eventName#" value="" onclick="checkedRow('event6', event);"></th>
+            <td>Baptismal</td>
+            <td>Baby Baptism</td>
+            <td>MMMM dd, YYYY</td>
+            <td><button class="btn btn-certificate" type="button" name="button">Certificate</button></td>
+          </tr>
+
+          <tr id="event7">
+            <th scope="row"><input type="checkbox" name="eventName#" value="" onclick="checkedRow('event7', event)"></th>
+            <td>Anniversary</td>
+            <td>1st Anniversary Anniversary</td>
+            <td>MMMM dd, YYYY</td>
+            <td><span class="no-action"></span></td>
+          </tr>
+
+          <tr id="event8">
+            <th scope="row"><input type="checkbox" name="eventName#" value="" onclick="checkedRow('event8', event)"></th>
+            <td>Marriage</td>
+            <td>Mr. and Mrs. Wed</td>
+            <td>MMMM dd, YYYY</td>
+            <td><button class="btn btn-certificate" type="button" name="button">Certificate</button></td>
+          </tr>
+        </tbody>
+      </table>
+    </form>
     <!-- ************************ -->
   </main>
 
@@ -201,67 +216,88 @@
     </div>
   </section>
 
-  <!-- Schedule Other Event -->
-  <!-- <section class="container-center hidden" id="otherEvent">
-    <div class="popup">
-      <div class="popup-header">
-        <h2 class="popup-heading">Schedule an Event</h2>
-        <i class="fa-solid fa-xmark popup-btn-close" onclick="togglePopup('otherEvent')"></i>
-      </div>
-
-      <hr>
-
-      <div class="popup-body"> -->
-        <!-- Uncomment form when passing the project -->
-        <!-- <form class="" action="index.html" method="post"> -->
-          <!-- <label for="eventName">Event Name</label>
-          <input class="input" id="eventName" type="text" name="" value="">
-
-          <label for="">Description</label>
-          <textarea class="input" name="eventDescription" rows="8" cols="80"></textarea>
-
-          <label for="">Location</label>
-          <input class="input" type="text" name="" value="">
-
-          <label for="">Organizer</label>
-          <input class="input" type="text" name="" value="">
-
-          <label for="">Contact No.</label>
-          <input class="input" type="text" name="" value="">
-
-          <div class="popup-action-btns"> -->
-            <!-- Remove onclick if to be passed -->
-            <!-- <input class="btn btn-submit" type="submit" name="" value="Next" onclick="window.location.href = 'index.html';">
-            <p class="btn-secondary" onclick="togglePopup('otherEvent')">Cancel</p>
-          </div> -->
-        <!-- </form> -->
-      <!-- </div>
-    </div>
-  </section> -->
-
-
-
-
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/4de3040dc0.js" crossorigin="anonymous"></script>
 
   <!-- Functionality -->
   <script>
+    const numberOfRows = document.getElementById('tableData').childElementCount;
+
     function togglePopup(elementId) {
       document.getElementById('overlay').classList.toggle("hidden");
       document.getElementById(elementId).classList.toggle("hidden");
     }
 
-    // function submitEvent() {
-    //   console.log('event submitted');
-    //   console.log(document.getElementById('events'));
-    //   var value = document.getElementById('events').value;
-    //   console.log(value);
-    //   if (value.toLowerCase() === 'others') {
-    //     document.getElementById('scheduleEvent').classList.toggle("hidden");
-    //     document.getElementById('otherEvent').classList.toggle("hidden");
-    //   }
-    // }
+    function selectAllCheckbox(elementId, cancel = false) {
+      var selectAll = document.getElementById(elementId);
+      var inputs = document.getElementsByTagName('input');
+
+      for (var i = 0; i < inputs.length; i++) {
+        if ((inputs[i] != selectAll) && (inputs[i].parentElement.closest('tr') !== null)) {
+          if (inputs[i].checked != selectAll.checked) {
+            inputs[i].checked = selectAll.checked;
+            selectRow(inputs[i], cancel);
+          } else if (inputs[i].checked && cancel) {
+            inputs[i].checked = selectAll.checked = false;
+            selectRow(inputs[i], cancel);
+          }
+        }
+      }
+    }
+
+    var checkedBoxCounter = 0;
+
+    function checkedRow(rowId, event) {
+      var input = document.getElementById(rowId);
+      selectRow(input);
+
+      document.getElementById("selectAll").checked = (numberOfRows === checkedBoxCounter ? true : false);
+      event.stopPropagation();
+    }
+
+    function selectRow(element, cancel) {
+      var row = element.parentElement.closest('tr');
+      getToday((row === null ? element : element.parentElement.parentElement), cancel);
+      showTableOptions();
+    }
+
+    function getToday(tableRow, cancel) {
+      var tableCell = tableRow.firstElementChild;
+
+      if (tableCell.firstElementChild.checked && cancel != true) {
+        checkedBoxCounter++;
+        tableRow.classList.add("row-selected");
+      } else {
+        checkedBoxCounter--;
+        tableRow.classList.remove("row-selected");
+      }
+      changeToday(tableCell, tableCell.firstElementChild.checked)
+    }
+
+    function changeToday(tableCell, isChecked) {
+      while (tableCell) {
+        if (tableCell.classList.contains('today')) {
+          if (isChecked) {
+            tableCell.classList.add("row-selected-today");
+          } else {
+            tableCell.classList.remove("row-selected-today");
+          }
+        }
+        tableCell = tableCell.nextElementSibling;
+      }
+    }
+
+    function showTableOptions() {
+      var options = document.getElementById('tableSelectOptions');
+      console.log("Rows: " + numberOfRows);
+      console.log("Counter: " + checkedBoxCounter);
+
+      if (checkedBoxCounter > 0 && options.classList.contains('hidden')) {
+        options.classList.remove("hidden");
+      } else if (checkedBoxCounter === 0) {
+        options.classList.add("hidden");
+      }
+    }
   </script>
 </body>
 
