--- a/html/events/index.html
+++ b/html/events/index.html
@@ -208,7 +208,7 @@
 
           <div class="popup-action-btns">
             <!-- Remove onclick if to be passed -->
-            <input class="btn btn-submit" type="submit" name="" value="Next" onclick="index.html">
+            <input class="btn btn-submit" type="submit" name="" value="Next" onclick="scheduleEvent('events')">
             <p class="btn-secondary" onclick="togglePopup('scheduleEvent')">Cancel</p>
           </div>
         <!-- </form> -->
@@ -220,85 +220,7 @@
   <script src="https://kit.fontawesome.com/4de3040dc0.js" crossorigin="anonymous"></script>
 
   <!-- Functionality -->
-  <script>
-    const numberOfRows = document.getElementById('tableData').childElementCount;
-
-    function togglePopup(elementId) {
-      document.getElementById('overlay').classList.toggle("hidden");
-      document.getElementById(elementId).classList.toggle("hidden");
-    }
-
-    function selectAllCheckbox(elementId, cancel = false) {
-      var selectAll = document.getElementById(elementId);
-      var inputs = document.getElementsByTagName('input');
-
-      for (var i = 0; i < inputs.length; i++) {
-        if ((inputs[i] != selectAll) && (inputs[i].parentElement.closest('tr') !== null)) {
-          if (inputs[i].checked != selectAll.checked) {
-            inputs[i].checked = selectAll.checked;
-            selectRow(inputs[i], cancel);
-          } else if (inputs[i].checked && cancel) {
-            inputs[i].checked = selectAll.checked = false;
-            selectRow(inputs[i], cancel);
-          }
-        }
-      }
-    }
-
-    var checkedBoxCounter = 0;
-
-    function checkedRow(rowId, event) {
-      var input = document.getElementById(rowId);
-      selectRow(input);
-
-      document.getElementById("selectAll").checked = (numberOfRows === checkedBoxCounter ? true : false);
-      event.stopPropagation();
-    }
-
-    function selectRow(element, cancel) {
-      var row = element.parentElement.closest('tr');
-      getToday((row === null ? element : element.parentElement.parentElement), cancel);
-      showTableOptions();
-    }
-
-    function getToday(tableRow, cancel) {
-      var tableCell = tableRow.firstElementChild;
-
-      if (tableCell.firstElementChild.checked && cancel != true) {
-        checkedBoxCounter++;
-        tableRow.classList.add("row-selected");
-      } else {
-        checkedBoxCounter--;
-        tableRow.classList.remove("row-selected");
-      }
-      changeToday(tableCell, tableCell.firstElementChild.checked)
-    }
-
-    function changeToday(tableCell, isChecked) {
-      while (tableCell) {
-        if (tableCell.classList.contains('today')) {
-          if (isChecked) {
-            tableCell.classList.add("row-selected-today");
-          } else {
-            tableCell.classList.remove("row-selected-today");
-          }
-        }
-        tableCell = tableCell.nextElementSibling;
-      }
-    }
-
-    function showTableOptions() {
-      var options = document.getElementById('tableSelectOptions');
-      console.log("Rows: " + numberOfRows);
-      console.log("Counter: " + checkedBoxCounter);
-
-      if (checkedBoxCounter > 0 && options.classList.contains('hidden')) {
-        options.classList.remove("hidden");
-      } else if (checkedBoxCounter === 0) {
-        options.classList.add("hidden");
-      }
-    }
-  </script>
+  <script type="text/javascript" src="../../js/index.js"></script>
 </body>
 
 </html>
