--- a/base.html
+++ b/base.html
@@ -75,12 +75,7 @@
   <script src="https://kit.fontawesome.com/4de3040dc0.js" crossorigin="anonymous"></script>
 
   <!-- Functionality -->
-  <script>
-    function togglePopup(elementId) {
-      document.getElementById('overlay').classList.toggle("hidden");
-      document.getElementById(elementId).classList.toggle("hidden");
-    }
-  </script>
+  <script type="text/javascript" src="js/index.js"></script>
 </body>
 
 </html>
