--- a/html/authentication/verify-email.html
+++ b/html/authentication/verify-email.html
@@ -42,7 +42,7 @@
 
           <div class="popup-action-btns">
             <!-- Remove onclick if to be passed -->
-            <input class="btn btn-submit" type="submit" name="" value="Submit" onclick="window.location.href = 'verified.html';">
+            <input class="btn btn-submit" type="submit" name="" value="Submit" onclick="changePage('verified.html')">
             <a href="../../index.html" class="btn-secondary">Back to Log In</a>
           </div>
         <!-- </form> -->
@@ -53,6 +53,9 @@
 
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/4de3040dc0.js" crossorigin="anonymous"></script>
+
+  <!-- Functionality -->
+  <script type="text/javascript" src="js/index.js"></script>
 </body>
 
 </html>
