--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <input class="input" type="text" id="captchaInput" name="captcha" placeholder="Insert Captcha text">
             </span>
             <!-- Remove onclick if to be passed -->
-            <input class="input btn btn-submit" type="submit" name="login" value="Log In" onclick="window.location.href = 'html/dashboard.html';">
+            <input class="input btn btn-submit" type="submit" name="login" value="Log In" onclick="changePage('html/dashboard.html')">
             <div class="login-options">
               <div class="">
                 <input type="checkbox" id="rememberInput" name="rememberMe" value="">
@@ -107,7 +107,7 @@
 
           <div class="popup-action-btns">
             <!-- Remove onclick if to be passed -->
-            <input class="btn btn-submit" type="submit" name="" value="Sign Up" onclick="window.location.href = 'html/authentication/verify-email.html';">
+            <input class="btn btn-submit" type="submit" name="" value="Sign Up" onclick="changePage('html/authentication/verify-email.html')">
             <p class="btn-secondary" onclick="togglePopup('signup')">Back to Log In</p>
           </div>
         <!-- </form> -->
@@ -135,7 +135,7 @@
 
           <div class="popup-action-btns">
             <!-- Remove onclick if to be passed -->
-            <input class="btn btn-submit" type="submit" name="" value="Submit" onclick="window.location.href = 'index.html';">
+            <input class="btn btn-submit" type="submit" name="" value="Submit" onclick="changePage('index.html')">
             <p class="btn-secondary" onclick="togglePopup('forgotPassword')">Back to Log In</p>
           </div>
         <!-- </form> -->
@@ -148,12 +148,7 @@
   <script src="https://kit.fontawesome.com/4de3040dc0.js" crossorigin="anonymous"></script>
 
   <!-- Functionality -->
-  <script>
-    function togglePopup(elementId) {
-      document.getElementById('overlay').classList.toggle("hidden");
-      document.getElementById(elementId).classList.toggle("hidden");
-    }
-  </script>
+  <script type="text/javascript" src="js/index.js"></script>
 </body>
 
 </html>
