added baptismal and wedding form

--- a/html/activities/index.html
+++ b/html/activities/index.html
@@ -49,16 +49,10 @@
   <main class="content content-grid">
     <header class="section-header">
       <h2 class="section-heading">Activities</h2>
-      <!-- <span class="side-to-side"> -->
       <button class="btn btn-schedule" type="button" name="button">
         <i class="fa-solid fa-plus icon"></i>
         Schedule Activity
       </button>
-      <!-- <form class="search-field" action="index.html" method="post">
-          <input class="input search" type="search" name="" value="" placeholder="Search here...">
-          <button class="btn btn-search" type="submit" name="search-btn"><i class="fa-solid fa-magnifying-glass icon"></i></button>
-        </form> -->
-      <!-- </span> -->
     </header>
 
     <div class="side-to-side table-action-buttons">
@@ -186,10 +180,10 @@
         <p class="popup-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Felis donec et odio pellentesque. Ut tortor pretium viverra suspendisse potenti nullam.
           In ante metus dictum at </p>
 
-        <h3>Activity Details</h3>
+        <h3 class="heading4">Activity Details</h3>
 
-        <div class="side-to-side">
-          <div class="half-of-whole">
+        <div class="row activity-details">
+          <div class="">
             <p>Organizer:</p>
             <p>Contact Number:</p>
             <p>Date:</p>
@@ -197,7 +191,7 @@
             <p>Location:</p>
           </div>
 
-          <div class="half-of-whole">
+          <div class="">
             <p>Organizer:</p>
             <p>Contact Number:</p>
             <p>Date:</p>
