--- a/base.html
+++ b/base.html
@@ -14,6 +14,13 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
     rel="stylesheet">
+
+  <style media="screen">
+    span,
+    div {
+      border: 2px black solid;
+    }
+  </style>
 </head>
 
 <body>
@@ -23,7 +30,7 @@
   <section>
     <nav class="navbar">
       <div class="navbar-brand">
-        <img class="navbar-brand-logo" src="https://cdn-icons-png.flaticon.com/512/739/739249.png" alt="Web application logo">
+        <img class="navbar-brand-logo" src="https://cdn-icons-png.flaticon.com/512/739/739249.png" alt="Web application logo" style="transform: scale(2); transition: all 1s ease">
         <h1 class="navbar-brand-text">CHURCH</h1>
       </div>
 
@@ -61,13 +68,25 @@
       <h2 class="section-heading">Page Title</h2>
     </header>
 
-    <div class="">
-      <img src="https://media-public.canva.com/MADQ4xTu4OA/1/screen.jpg" alt="Church" style="width: 100%; height: 400px; object-fit: cover;">
+    <!-- Insert Codes Here -->
+    <div class="sliding-container">
+      <div class="sliding" id="">
+        Slide 1
+      </div>
+
+      <div class="sliding">
+        Slide 2
+      </div>
+
+      <div class="sliding" id="slide">
+        Slide 3
+      </div>
     </div>
 
-    <!-- Insert Codes Here -->
-
     <!-- ************************ -->
+
+    <span>foo</span>
+    <div>bar</div>
 
   </main>
 
@@ -76,6 +95,36 @@
 
   <!-- Functionality -->
   <script type="text/javascript" src="js/index.js"></script>
+  <script type="text/javascript">
+    document.getElementById('slide').addEventListener('click', function(e) {
+
+      // this.classList.toggle(slideactive);
+
+      // (this.style.height == '50px' || this.style.height == '') ?
+      // this.style.height = '150px': this.style.height = '50px';
+
+    }, false);
+
+    if (document.addEventListener) {
+      document.addEventListener("click", function(e) {
+        console.log("addEventListener");
+        if (!e) e = window.event;
+        var targetElement = e.target || e.srcElement;
+        if (targetElement === document.getElementById('slide')) {
+          console.log("Got it");
+          document.getElementById('slide').classList.toggle('slideactive');
+        }
+        console.log(targetElement);
+      });
+    } else if (document.attachEvent) {
+      console.log('attachEvent');
+      document.attachEvent("onclick", function(e) {
+        if (!e) e = window.event;
+        var targetElement = e.target || e.srcElement;
+        console.log(targetElement);
+      });
+    }
+  </script>
 </body>
 
 </html>
